@@ -1,5 +1,6 @@
 2021-09-18 Danilo Chang
 
+	* Implement command: connectedComponentsWithStats
 	* Implement command: transform
 
 2021-09-17 Danilo Chang
